# onyxlang

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Stmt.h.5E3362B87FE29125.idx  main.cpp.3CF57A40A68F6815.idx  test.cpp.7C01CDB05A706B10.idx  tmp.cpp.3F1B9FA3A609181C.idx  tmp.cpp.6983752C0736E52F.idx  tmp.cpp.776E1E0384FF745E.idx  tmp.cpp.91AC1F0B0F2263E7.idx  tmp.cpp.A068F608F3E8B2FC.idx
Examples/: Conditions.ox  Function.mr  Function.ox  Implementation.mr  Implementation.ox  Loops.mr  Loops.ox  Main.ox  Module.mr  New-Del.mr  Pointers.mr  Structure.mr  Structure.ox  Trait.mr  Variable.ox  Variables.mr
Include/marble/AST/: AST.h  Argument.h  Expr.h  Node.h  Printer.h  Stmt.h  Visitor.h
Include/marble/AST/Expressions/: BinaryExpr.h  DerefExpr.h  FieldAccessExpr.h  FunCallExpr.h  LiteralExpr.h  MethodCallExpr.h  NewExpr.h  NilExpr.h  RefExpr.h  StructExpr.h  UnaryExpr.h  VarExpr.h
Include/marble/AST/Statements/: BreakStmt.h  ContinueStmt.h  DelStmt.h  EchoStmt.h  FieldAsgnStmt.h  ForLoopStmt.h  FunCallStmt.h  FunDeclStmt.h  IfElseStmt.h  ImplStmt.h  ImportStmt.h  MethodCallStmt.h  ModDeclStmt.h  ModuleDeclStmt.h  RetStmt.h  StructStmt.h  TraitDeclStmt.h  VarAsgnStmt.h  VarDeclStmt.h
Include/marble/Basic/: ASTType.h  ASTVal.h  DiagInfo.h  DiagKind.h  DiagnosticBuilder.h  DiagnosticEngine.h  Module.h  ModuleManager.h  Symbols.h
Include/marble/CodeGen/: CodeGen.h
Include/marble/Compilation/: Compilation.h  Optimizer.h  Options.h
Include/marble/Lexer/: Keywords.h  Lexer.h  Token.h
Include/marble/Parser/: Parser.h  Precedence.h
Include/marble/Sema/: Semantic.h
Include/onyx/AST/: AST.h  Argument.h  Expr.h  Node.h  Printer.h  Stmt.h  Visitor.h
Include/onyx/AST/Expressions/: BinaryExpr.h  FieldAccessExpr.h  FunCallExpr.h  LiteralExpr.h  MethodCallExpr.h  StructExpr.h  UnaryExpr.h  VarExpr.h
Include/onyx/AST/Statements/: BreakStmt.h  ContinueStmt.h  EchoStmt.h  FieldAsgnStmt.h  ForLoopStmt.h  FunCallStmt.h  FunDeclStmt.h  IfElseStmt.h  ImplStmt.h  MethodCallStmt.h  RetStmt.h  StructStmt.h  TraitDeclStmt.h  VarAsgnStmt.h  VarDeclStmt.h
Include/onyx/Basic/: ASTType.h  ASTVal.h  DiagInfo.h  DiagKind.h  DiagnosticBuilder.h  DiagnosticEngine.h
Include/onyx/CodeGen/: CodeGen.h
Include/onyx/Compilation/: Compilation.h  Optimizer.h  Options.h
Include/onyx/Lexer/: Keywords.h  Lexer.h  Token.h
Include/onyx/Parser/: Parser.h  Precedence.h
Include/onyx/Sema/: Semantic.h
Libs/Std/Math/: mod.mr
Src/: Main.cpp
Src/AST/: ASTType.cpp  CMakeLists.txt  Printer.cpp
Src/Basic/: ASTVal.cpp  CMakeLists.txt  DiagInfo.cpp  DiagnosticBuilder.cpp
Src/CodeGen/: CMakeLists.txt  CodeGen.cpp  tmp.cpp
Src/Compilation/: CMakeLists.txt  Compilation.cpp  Optimizer.cpp
Src/Lexer/: CMakeLists.txt  Lexer.cpp
Src/Parser/: CMakeLists.txt  Parser.cpp  Precedence.cpp
Src/Sema/: CMakeLists.txt  Semantic.cpp
Tests/: README.md  test_all.sh
Tests/Basic/: Function.mr  Implementation.mr  Pointer.mr  Struct.mr  Trait.mr  Variable.mr
Tests/Negative/: AccessingFieldViaTrait.mr  AddressOfRValue.mr  AmbiguousTraitMethodCall.mr  BoolArithmeticMismatch.mr  BreakOutsideLoop.mr  CircularPath.mr  ConstModMutation.mr  ConstPointerIndirection.mr  ConstReassignment.mr  ConstStructFieldUpdate.mr  ConstStructMethodMutation  ConstStructMethodMutation.mr  ContinueOutsideLoop.mr  CrossModTraitMissingMethod.mr  DeepMissingPath.mr  DelNonPointer.mr  DelOnStackVariable.mr  DerefNonPointer.mr  DereferencingNothPointer.mr  DoubleAddressOf.mr  DuplicateFieldDefinition.mr  DuplicateFunInMod.mr  DuplicateFunctionDefinition.mr  DuplicateModule.mr  DuplicateParameterName.mr  EchoNothType.mr  FloatToPointerCast.mr  ForConditionTypeMismatch.mr  ImportNonExistent.mr  ImportPrivFromLib.mr  IncompatiblePointerAssign.mr  IncompatibleTraitSignature.mr  InvalidNarrowingCast.mr  Lib.mr  LogicOpOnMod.mr  LogicalNotOnNumber.mr  MainWithWrongSignature.mr  MethodCallOnNonStruct.mr  MissingReturnValue.mr  ModAsType.mr  (+31 more)
Tests/Positive/: AmbiguousTraitMethodCall.mr  Arithmetic.mr  BreakAndContinue.mr  ConstAccess.mr  DeepMissingPath.mr  Del.mr  FieldAccess.mr  FunCall.mr  ImportAccessFromLib.mr  Lib.mr  MethodAccess.mr  Modules.mr  NestedMod.mr  NewStruct.mr  PointerArithmetic.mr  PointerSubtraction.mr  StructFieldUpdate.mr  StructInSelf.mr  StructInst.mr  StructMethodMutation.mr  ThisAssignmentMismatch.mr  TraitImpl.mr  VarAccess.mr  VariableModMutation.mr  VariablePointerIndirection.mr  VariableReassignment.mr
include/onyx/AST/: AST.h  Node.h  Stmt.h
include/onyx/AST/Expressions/: BinaryExpr.h  UnaryExpr.h
include/onyx/Basic/: ASTVal.h  DiagKind.h
include/onyx/ast/: AST.h  Expr.h  Node.h  Stmt.h
include/onyx/ast/Expressions/: BinaryExpr.h  LiteralExpr.h  UnaryExpr.h  VarExpr.h
include/onyx/ast/Statements/: VarDeclStmt.h
include/onyx/basic/: ASTType.h  ASTVal.h  DiagInfo.h  DiagKind.h  DiagnosticBuilder.h  DiagnosticEngine.h
include/onyx/lexer/: Keywords.h  Lexer.h  Token.h
include/onyx/parser/: Parser.h  Precedence.h
src/: Main.cpp  main.cpp
src/ast/: CMakeLists.txt
src/basic/: CMakeLists.txt  DiagInfo.cpp  DiagnosticBuilder.cpp
src/codegen/: CMakeLists.txt
src/lexer/: CMakeLists.txt  Lexer.cpp
src/parser/: CMakeLists.txt  Parser.cpp  Precedence.cpp
src/sema/: CMakeLists.txt
